--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
 
     <!-- SLIDES -->
-    <slide class="class1" id="id1" style="background:#216357;">
+    <slide class="class1 class1" id="id1" style="background:url(assets/img/blackboard-wallpapers1.jpg);">
   <article data-timings="">
     <style media="screen">
 a:link { color:#b3ff1a; text-decoration: none; }
@@ -100,8 +100,8 @@ has been falling rapidly for many years. </p>
   <article data-timings="">
     <style>
 a:link { color:#b3ff1a; text-decoration: none; }
-a:visited { color:#99e600 !important; text-decoration: none; }
-a:hover { color:##ffff00 !important; text-decoration: none; }
+a:visited { color:#99e600; text-decoration: none; }
+a:hover { color:##ffff00; text-decoration: none; }
 a:active { color:#ffffff; text-decoration: underline; }
 </style>
 
