--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
 
     <!-- SLIDES -->
-    <slide class="class1 class1" id="id1" style="background:url(assets/img/blackboard-wallpapers1.jpg);">
+    <slide class="class1" id="id1" style="background:#216357;">
   <article data-timings="">
     <style media="screen">
 a:link { color:#b3ff1a; text-decoration: none; }
@@ -62,7 +62,7 @@ Slidify or RStudio Presenter. This presentation adresses the second part of the 
 
 <p>The application developed for the first part of the assignment is avalilable at:</p>
 
-<p><a href="https://kurowska.shinyapps.io/disk_prices><a href="https://kurowska.shinyapps.io/disk_prices">https://kurowska.shinyapps.io/disk_prices</a></a></p>
+<p><a href="https://kurowska.shinyapps.io/disk_prices"><a href="https://kurowska.shinyapps.io/disk_prices">https://kurowska.shinyapps.io/disk_prices</a></a></p>
 
 <p>The source code for ui.R and server.R files are available on GitHub:</p>
 
