--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ Slidify or RStudio Presenter. This presentation adresses the second part of the 
 
 <p>The application developed for the first part of the assignment is avalilable at:</p>
 
-<p><a href="https://kurowska.shinyapps.io/disk_prices"><a href="https://kurowska.shinyapps.io/disk_prices">https://kurowska.shinyapps.io/disk_prices</a></a></p>
+<p><a href="https://kurowska.shinyapps.io/disk_prices">https://kurowska.shinyapps.io/disk_prices</a></p>
 
 <p>The source code for ui.R and server.R files are available on GitHub:</p>
 
-<p><a href="https://github.com/kurowska/disk_prices"><a href="https://github.com/kurowska/disk_prices">https://github.com/kurowska/disk_prices</a></a></p>
+<p><a href="https://github.com/kurowska/disk_prices">https://github.com/kurowska/disk_prices</a></p>
 
   </article>
   <!-- Presenter Notes -->
