--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ My application uses data gathered from the following sources:</p>
 
 <ul>
 <li><a href="http://www.mkomo.com/cost-per-gigabyte">mkomo.com</a></li>
-<li><a href="http://www.jcmit.net/diskprice.htm">jcmit.com</a></li>
+<li><a href="http://www.jcmit.net/diskprice.htm%22%3Ejcmit.com">jcmit.com</a></li>
 </ul>
 
 <p>I have processed the data and used it to show how storage prices changed over 
